@@ -26,7 +26,6 @@ package com.oracle.tools.packager.mac;
 
 import com.oracle.tools.packager.*;
 import com.oracle.tools.packager.IOUtils;
-import sun.misc.BASE64Encoder;
 
 import java.io.*;
 import java.text.MessageFormat;
@@ -55,6 +54,14 @@ public class MacDmgBundler extends MacBaseInstallerBundler {
             Boolean.class,
             params -> Boolean.FALSE,
             (s, p) -> Boolean.parseBoolean(s));
+
+    public static final BundlerParamInfo<String> INSTALLER_SUFFIX = new StandardBundlerParam<> (
+            I18N.getString("param.installer-suffix.name"),
+            I18N.getString("param.installer-suffix.description"),
+            "mac.dmg.installerName.suffix",
+            String.class,
+            params -> "",
+            (s, p) -> s);
 
     public MacDmgBundler() {
         super();
@@ -185,8 +192,7 @@ public class MacDmgBundler extends MacBaseInstallerBundler {
                     LICENSE_FILE.fetchFrom(params).get(0));
 
             byte[] licenseContentOriginal = IOUtils.readFully(licFile);
-            BASE64Encoder encoder = new BASE64Encoder();
-            String licenseInBase64 = encoder.encode(licenseContentOriginal);
+            String licenseInBase64 = Base64.getEncoder().encodeToString(licenseContentOriginal);
 
             Map<String, String> data = new HashMap<>();
             data.put("APPLICATION_LICENSE_TEXT", licenseInBase64);
@@ -294,7 +300,9 @@ public class MacDmgBundler extends MacBaseInstallerBundler {
         if (!imagesRoot.exists()) imagesRoot.mkdirs();
 
         File protoDMG = new File(imagesRoot, APP_NAME.fetchFrom(p) +"-tmp.dmg");
-        File finalDMG = new File(outdir, INSTALLER_NAME.fetchFrom(p) +".dmg");
+        File finalDMG = new File(outdir, INSTALLER_NAME.fetchFrom(p)
+                + INSTALLER_SUFFIX.fetchFrom(p)
+                + ".dmg");
 
         File srcFolder = APP_IMAGE_BUILD_ROOT.fetchFrom(p); //new File(imageDir, p.name+".app");
         File predefinedImage = getPredefinedImage(p);
@@ -467,6 +475,7 @@ public class MacDmgBundler extends MacBaseInstallerBundler {
 
         results.addAll(MacAppBundler.getAppBundleParameters());
         results.addAll(Arrays.asList(
+                INSTALLER_SUFFIX,
                 LICENSE_FILE,
                 SIMPLE_DMG,
                 SYSTEM_WIDE
